gcc/testsuite/rust/rustc/ui/nll/issue-61424.rs
// run-rustfix

#![deny(unused_mut)]

fn main() {
    let mut x; // { dg-error "" "" { target *-*-* } }
    x = String::new();
    dbg!(x);
}

